--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     },
     "require": {
         "intervention/image": "^3.11",
-        "phpmailer/phpmailer": "^6.10"
+        "phpmailer/phpmailer": "^6.10",
+        "vlucas/phpdotenv": "^5.6"
     },
     "autoload": {
         "psr-4": {
